--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~8.1.2",
     "@capacitor/android": "^1.2.1",
     "@capacitor/core": "1.2.1",
+    "@ionic-native/bluetooth-le": "^5.15.0",
     "@ionic-native/bluetooth-serial": "^5.15.0",
     "@ionic-native/camera": "^5.14.0",
     "@ionic-native/core": "^5.0.0",
@@ -34,6 +35,7 @@
     "@ionic/storage": "^2.2.0",
     "cordova-android": "^8.1.0",
     "cordova-plugin-bluetooth-serial": "^0.4.7",
+    "cordova-plugin-bluetoothle": "^4.5.5",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-media": "^5.0.3",
@@ -93,7 +95,8 @@
       "cordova-plugin-media": {},
       "cordova-plugin-file": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-bluetooth-serial": {}
+      "cordova-plugin-bluetooth-serial": {},
+      "cordova-plugin-bluetoothle": {}
     },
     "platforms": [
       "android"
